<resources>
    <string name="app_name">Reached</string>
    <string name="app_name_release">Reached</string>
    <string name="app_name_staging">Reached-stage</string>
    <string name="app_name_dev">Reached-Dev</string>
    <string name="button_text_create">CREATE GROUP</string>
    <string name="button_text_join">JOIN GROUP</string>
    <string name="add">Add</string>
    <string name="button_view_list">View list</string>
    <string name="hint_type_group_name">Group name</string>
    <string name="create_group">Create group</string>
    <string name="button_text_cancel">cancel</string>
    <string name="enter_name">Enter name..</string>
    <string name="valid_please_enter_group_name">Please enter group name</string>
    <string name="my_groups">Groups</string>
    <string name="button_text_invite">INVITE</string>
    <string name="greetings">Greetings!</string>
    <string name="you_have_been_invited_to_the_group_join_to_proceed">You have been invited to the group %1$s. You can join to proceed.</string>
    <string name="joining_group">Joining group...</string>
    <string name="send_sos">Send SOS</string>
    <string name="mark_safe">Mark Safe</string>
    <string name="add_member">Add member</string>
    <string name="sos_sent_successfully">SOS sent successfully!</string>
    <string name="sos_was_stopped">SOS was stopped!</string>
    <string name="leave_group">Leave group</string>
    <string name="no_groups_please_create_or_join_a_new_group">No groups. Please create or join a new group</string>
    <string name="delete_group">Delete group</string>
    <string name="request_sent">Request sent</string>
    <string name="leave_request_already_sent_message">You have already sent a request to leave the group!</string>
    <string name="button_text_continue">Continue</string>
    <string name="onboarding_text_one">Locating your all Family\nmembers is now easy.</string>
    <string name="onboarding_text_two">Locating your Friends\nis now easy.</string>
    <string name="onboarding_text_three">Create safe circles for\nkids at multiple locations.</string>
    <string name="onboarding_text_four">Get timely alerts of your loved\nones whereabouts.</string>
    <string name="show_this_qr_code_to_your_family_member">Show this QR code to your\nfamily member</string>
    <string name="button_text_send_invite">SEND INVITE</string>
    <string name="button_text_skip">SKIP</string>
    <string name="e_g_home_school_and_classes">e.g. Home, School and CLasses</string>
    <string name="show_on_map">Show on Map</string>
    <string name="show_list">Show list</string>
    <string name="location">Location</string>
    <string name="safe_radius">Safe Radius</string>
    <string name="places_api_key">AIzaSyBQk3rofOurFyFs-moepr8s_s2DZ4U9auY</string>
    <string name="save_address">Save address</string>
    <string name="label_address">Address</string>
    <string name="save_as_favorite">Save as favorite</string>
    <string name="button_text_back">Back</string>
    <string name="choose_location_on_map_title">Choose Locaiton on map</string>
    <string name="safeguard_your_family_and_friend_s">SAFEGUARD FAMILY AND FRIEND\'S!</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="sign_in">SIGN IN</string>
    <string name="location_name">Location name</string>
    <string name="button_text_save">Save</string>
    <string name="address_save_success_message">Address added successfully!</string>
    <string name="check_location_activity">Check Location Activity</string>
    <string name="locate_now">Locate now</string>
    <string name="message_address_deleted">Address was deleted successfully!!</string>
    <string name="logout">Logout</string>
    <string name="edit_group">Edit group</string>
    <string name="location_drag_message">Tap and hold the marker to move around the map.</string>
    <string name="monday">M</string>
    <string name="sunday">S</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="welcome_nto_nfamily_tracker">Welcome\nto\nFamily tracker</string>
    <string name="location_title_message">\"Reached\" can be only used if it can access your location \"all the time\"</string>
    <string name="location_app_setting_message">In app settings, select Allow all the time for \"Reached\" location permission.</string>
    <string name="location_app_message">This app collects location data to share your location with your group members in the app, even if the app is closed or not in use. We do not use this data for any other purpose which is also specified in our Privacy Policy.</string>
    <string name="location_permission">Go to location premissions</string>
    <string name="permission_message">\"Reached\" requires location permission to work</string>
</resources>