<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        app:singleLine="true"
        android:id="@+id/chipGroupWeekdays"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:lineSpacing="4dp"

        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.chip.Chip
            android:id="@+id/sun"
            style="@style/DayChipStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mon"
            style="@style/WedandMonDayChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday" />
        <com.google.android.material.chip.Chip
            android:id="@+id/tue"
            style="@style/DayChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />
        <com.google.android.material.chip.Chip
            android:id="@+id/wed"
            style="@style/WedandMonDayChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />
        <com.google.android.material.chip.Chip
            android:id="@+id/thru"
            style="@style/DayChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T" />
        <com.google.android.material.chip.Chip
            android:id="@+id/fri"
            style="@style/DayChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday" />
        <com.google.android.material.chip.Chip
            android:id="@+id/sat"
            style="@style/DayChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>