<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/location_title_message"
        android:textAppearance="@style/LocationAlertTitle"
        android:textFontWeight="900" />

    <TextView
        android:id="@+id/textViewAppSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:textAppearance="@style/LocationSettingTitle"
        android:text="@string/location_app_setting_message" />

    <TextView
        android:id="@+id/textViewPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/location_app_message" />

    <com.google.android.material.button.MaterialButton
       android:id="@+id/buttonGoToPermissionLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/location_permission"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="40dp" />
</LinearLayout>