<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PermissionsRequiredActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/textViewtitleMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:gravity="center"
        android:text="@string/permission_message"
        android:textAppearance="@style/PermissionMessage"
        android:textFontWeight="700"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewtitleMessage"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/location"
        android:textAppearance="@style/LocationTitle"
        android:textFontWeight="900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtitleMessage" />

    <TextView
        android:id="@+id/textviewSharedlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:text="Share your location with \nyour friends"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />
    <ImageView
        android:id="@+id/imageViewTick"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_below="@+id/textViewtitleMessage"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtitleMessage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enableLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="Enable"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="12dp"
        android:visibility="gone"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtitleMessage" />

    <TextView
        android:id="@+id/textViewPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/location_app_message"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToPermissionLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:paddingVertical="12dp"
        android:text="@string/button_text_continue"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPolicy" />

</androidx.constraintlayout.widget.ConstraintLayout>