<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E8E8E8"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProfileActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:src="@drawable/ic_arrow_back_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        tools:text="Nayan Dhabarde" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckLocationActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/reached_header_primary"
        android:text="@string/check_location_activity"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtName" />

    <TextView
        android:id="@+id/txtLocateNow"
        android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/locate_now"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgLocate"
        app:layout_constraintTop_toBottomOf="@id/btnCheckLocationActivity" />

    <ImageView
        android:id="@+id/imgLocate"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_qr_location"
        app:layout_constraintBottom_toBottomOf="@id/txtLocateNow"
        app:layout_constraintEnd_toStartOf="@id/txtLocateNow"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtLocateNow" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:alpha="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLocateNow"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/txtLocation"
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerView"
        android:layout_margin="16dp"
        />
    <TextView
        android:id="@+id/txtAddLocaiton"
        android:layout_width="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:text="ADD NEW LOCAITON"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerView"
        app:drawableStartCompat="@drawable/ic_add"
        android:drawablePadding="8dp"
        android:drawableTint="@color/reached_yellow"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/locationViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAddLocaiton" />
</androidx.constraintlayout.widget.ConstraintLayout>