<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/titleTextView"
        android:text="@string/my_groups"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeHolderLayout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:text="@string/no_groups_please_create_or_join_a_new_group"
            android:id="@+id/placeHolderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fabMenuLayout"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/add"
        app:layout_constraintEnd_toEndOf="@id/add"
        app:layout_constraintBottom_toTopOf="@id/add">

        <TextView
            android:text="Create group"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/fabCreate"
            app:layout_constraintTop_toTopOf="@id/fabCreate"
            app:layout_constraintBottom_toBottomOf="@id/fabCreate"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/ic_create_group"
            app:tint="@color/white"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/fabJoin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:text="Join group"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/fabJoin"
            app:layout_constraintTop_toTopOf="@id/fabJoin"
            app:layout_constraintBottom_toBottomOf="@id/fabJoin"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/ic_join_group"
            app:tint="@color/white"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/add"
        android:layout_width="wrap_content"
        app:tint="@color/white"
        android:src="@drawable/ic_add"
        app:iconGravity="end"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>